# miniCOIL

./: README.md  download_openwebtext.sh  inference.sh  pyproject.toml  run_eval.sh  split_sentences.sh  train-triplets.sh  train.sh  unpack_openwebtext.sh
bm43/: convert_idf.py  convert_openwebtext.py  filtering.py  read_data.py
bm43/model/: encoder.py
data/: 30k-vocab-filtered.json  30k-vocab-filtered.txt
mini_coil/: contrastive_loss.py  convert_idf.py  encode_data.py  filtering.py  pre_encoder.py  read_data.py  read_pre_encoded.py  settings.py  triplet_loss.py  visualize_encoder.py  vocab_resolver.py
mini_coil/data_pipeline/: abstract_uploader.py  augment_data.py  cluster_words.py  combine_models.py  compress_dimentions.py  convert_openwebtext.py  distance_matrix.py  download_validation.py  encode_and_filter.py  encode_data.py  encode_targets.py  inference_selector.py  load_sentences.py  pre_encoder.py  prepare_context.py  prepare_vocab.py  split_sentences.py  split_train_val.py  stopwords.py  upload_compressed_to_qdrant.py  upload_to_qdrant.py  vocab_resolver.py
mini_coil/model/: cosine_loss.py  decoder.py  encoder.py  encoder_numpy.py  mini_coil.py  mini_coil_inference.py  mse_loss.py  triplet_loss.py  word_encoder.py
mini_coil/training/: coil_module.py  contrastive_dataloader.py  data_loader.py  train.py  train_word.py  train_word_triplet.py  triplet_dataloader.py  triplet_word_module.py  (+2 more)
tests/: 01_embedding_maker.py  02_matrix_create.py  03_matrix_triplets.py  04_matrix_test.py  04_umap_emb.py  embed_minicoil.py  matrix_check.py  visualize_embeddings.py
