[tool.poetry]
name = "train-bm"
version = "0.1.0"
description = ""
authors = ["generall <andrey@vasnetsov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^17.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
ipdb = "^0.13.13"
pystemmer = "^2.2.0.1"
snowballstemmer = "^2.2.0"
tqdm = "^4.66.4"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
