[tool.poetry]
name = "train-bm"
version = "0.1.0"
description = ""
authors = ["generall <andrey@vasnetsov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^17.0.0"
pandas = "^2.2.2"
ipdb = "^0.13.13"
pystemmer = "^2.2.0.1"
snowballstemmer = "^2.2.0"
tqdm = "^4.66.4"
torch = "^2.4.0"
onnx = "^1.16.2"
onnxruntime = "^1.18.1"
transformers = "^4.44.0"
npy-append-array = "^0.9.16"
lightning = {extras = ["extra"], version = "^2.4.0"}
sentence-splitter = "^1.4"
sentence-transformers = "^3.0.1"
qdrant-client = "^1.11.0"
umap-learn = "^0.5.6"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
